@@ -1,3 +1,7 @@
+2000-01-21  David Wolfskill  <dhw@whistle.com>
+
+	* server-src/amtoc.pl.in: Add `-w' to add new lines and form feeds.
+
 2000-01-21  Alexandre Oliva  <oliva@lsd.ic.unicamp.br>
 
 	* man/amlabel.8.in: Tapes are no longer requested in reverse order
